# tutorial_nlp

./: README.md  pyproject.toml
elyza_tutorial/Chapter1/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py
elyza_tutorial/Chapter2/: 10.py  11.py  11.sh  12.py  12.sh  13.py  13.sh  14.py  15.py  16.py  16.sh  17.py  17.sh  18.py  18.sh  19.py  19.sh
elyza_tutorial/Chapter3/: 20.py  21.py  22.py  23.py  24.py  25.py  26-28.py  26.py  29.py  Chapter3.py  ans.txt  chap3.py  key_val.txt  memo.txt  template.txt
elyza_tutorial/Chapter4/: 30.py  n_30.py  n_31.py  n_32.py  n_33.py  n_34.py  n_35.py  n_36.py  n_37.py  n_38.py  n_39.py  tempCodeRunnerFile.py
elyza_tutorial/Chapter5/: n_40.py  n_41.py  n_42.py  n_43.py  n_44.py  n_45.py  n_46.py  n_46_ans.txt  n_47.py  n_47_ans.txt  n_48.py  n_48_ans.txt  n_49.py
elyza_tutorial/Chapter6/: maxf_5000.pickle  n_50.py  n_51.py  n_52.py  n_53.py  n_54.py  n_55.py  n_56.py  n_57.py  n_58.py  n_59.py  tf-idfvectorizer.pickle
elyza_tutorial/Chapter7/: n_60.py  n_61.py  n_62.py  n_63.py  n_64.py  n_65.py  n_66.py  n_67.py  n_68.py  n_69.py
elyza_tutorial/Chapter8/: n_70.py  n_71-78.py  n_79.py
elyza_tutorial/Chapter9/: n_80-85.py  n_84.py  n_86-88.py  n_89.py  test.txt  tools.py  train.txt  val.txt
elyza_tutorial/DL_NLP/: tools.py  tools_cbow.py  tools_skipgram.py
elyza_tutorial/DL_NLP/chap1/: chap1.py  sample_submission.csv  submission.csv
elyza_tutorial/DL_NLP/chap2/: chap2_CBOW.py  chap2_SG.py  submission.csv  (+1 more)
elyza_tutorial/dl_nlp/: .gitignore  add_credits.py  add_user.py
tests/: test_elyza_tutorial.py
(+69 files in other folders)
