[tool.poetry]
name = "elyza_tutorial"
version = "0.1.0"
description = ""
authors = ["tsomeya <tsomeya@student.42tokyo.jp>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20.2"
matplotlib = "^3.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
